--- a/docs/1_theBasics/1.md
+++ b/docs/1_theBasics/1.md
@@ -8,8 +8,8 @@
 이미 React에 익숙한가요? 이 섹션을 건너뛰거나, 간단한 복습을 위해 읽고 넘어가도 좋습니다. 
 
 ## Prerequisites (전제조건)
-`React Native` 로 작업을 하려면 기본적인 `JavaScript` 에 대한 이해가 필요합니다.
-`JavaScript` 를 처음 사용하거나 복습이 필요한 경우, `Mozilla Debeloper Network` 에서 학습할 수 있습니다.
+React Native로 작업을 하려면 기본적인 JavaScript` 에 대한 이해가 필요합니다.
+JavaScript를 처음 사용하거나 복습이 필요한 경우, Mozilla Debeloper Network에서 학습할 수 있습니다.
 
 > 이 문서는 React, Android, 또는 iOS 개발에 대한 사전지식이 없는 사람을 대상으로 작성되었지만, 열정적인 React Native 개발자에게 귀중한 학습 자료이기도 하므로, 필요한 경우 좀 더 깊이있는 자료나 글들을 링크로 올려두었습니다. 
 
@@ -32,10 +32,10 @@ const YourApp = () => {
 
 export default YourApp;
 ```
-위 예제는 Snack Player입니다. Snack Player는 Expo에서 만든 편리한 툴으로, React Native 프로젝트를 임베드 및 실행하고, Android 및 iOS와 같은 플랫폼에서 렌더링되는 과정을 공유할 수 있습니다. 코드를 라이브로 볼 수 있고 편집이 가능하므로, 브라우저에서 직접 실행할 수 있습니다. 
+위 예제는 Snack Player입니다. Snack Player는 Expo에서 만든 편리한 툴으로, React Native 프로젝트를 임베드 및 실행하고, Android 및 iOS와 같은 플랫폼에서 렌더링되는 과정을 공유할 수 있습니다. 코드를 라이브로 볼 수 있고 편집이 가능하므로, 브라우저에서 직접 실행할 수 있습니다. //이부분생략해도될거같아요
 위의 "Try editing me!" 텍스트를 "Hello, world!"로 변경해보세요. 
 
-> 로컬 개발 환경 설정을 원하는 경우, "로컬 기기에서 개발 환경 설정하기" 가이드를 따라 이 예제 코드를 `App.js` 파일에 복사하면 됩니다. (웹 개발자인 경우, 모바일 브라우저 테스트를 위한 로컬 환경이 이미 설정되어 있을 수 있습니다!)
+> 로컬 개발 환경 설정을 원하는 경우, [로컬 기기에서 개발 환경 설정하기](링크) 가이드를 따라 이 예제 코드를 `App.js` 파일에 복사하면 됩니다. (웹 개발자인 경우, 모바일 브라우저 테스트를 위한 로컬 환경이 이미 설정되어 있을 수 있습니다!)
 
 ## Function Components and Class Components (함수형 컴포넌트와 클래스형 컴포넌트)
 React에서는 클래스 또는 함수를 사용해 컴포넌트를 만들 수 있습니다. 원래 클래스형 컴포넌트가 상태를 가질 수 있는 유일한 컴포넌트였지만, React의 Hooks API 도입 이후 함수형 컴포넌트에도 상태 등을 추가할 수 있게 되었습니다. 
@@ -85,7 +85,7 @@ class HelloWorldApp extends Component {
 
 export default HelloWorldApp;
 ```
-"이 문서의 이전 버전"(링크)에서 더 많은 클래스형 컴포넌트 예제를 찾을 수 있습니다. 
+[이 문서의 이전 버전](링크)에서 더 많은 클래스형 컴포넌트 예제를 찾을 수 있습니다. 
 
 ## Developer Notes
 다양한 개발 배경을 가진 사람들이 React Native를 배우고 있습니다. 당신은 웹에서 Android, iOS 등에 이르는 폭넓은 기술 경험을 가지고 있을 수도 있습니다. 우리는 모든 배경의 개발자들을 위한 문서를 작성하려고 노력했습니다. 때로는 다음과 같은 플랫폼별 설명이 제공됩니다. 
@@ -99,4 +99,4 @@ Web : Web 개발자는 이 개념에 친숙할 수도 있습니다.
 메뉴는 굵은 글씨로 작성되었으며 꺽쇠를 사용해 하위 메뉴를 탐색합니다. 예: **Android Studio > Preferences**
 
 ---
-이 가이드가 어떻게 구성되었는지 알았으니, 이제 Ract Native: Native Components의 기초에 대해 알아보겠습니다.
+가이드가 어떻게 구성되었는지 알아봤으니, 이제 Ract Native: Native Components의 기초에 대해 알아보겠습니다.
