--- a/docs/1_theBasics/1.md
+++ b/docs/1_theBasics/1.md
@@ -1,5 +1,5 @@
 # Introduction
-> React Native 여정의 시작을 환영합니다! 환경 설정 가이드는 [자체 섹션](https://reactnative.dev/docs/environment-setup)으로 분리되었습니다. 문서, Native 컴포넌트, React 등에 대한 소개를 계속 읽어보세요!
+> React Native 여정의 시작을 환영합니다! 환경 설정 가이드는 [자체 섹션](https://reactnative.dev/docs/environment-setup)으로 분리되었습니다. 문서, 네이티브 컴포넌트, React 등에 대한 소개를 계속 읽어보세요!
 
 고급 iOS 개발자부터 React 초보자, 경력자부터 처음 프로그래밍을 시작하는 사람들까지, 다양한 사람들이 React Native를 사용합니다. 이 문서는 경험 수준이나 배경에 관계없이 모든 학습자를 위해 작성되었습니다. 
 
@@ -96,4 +96,4 @@ Web : Web 개발자는 이 개념에 친숙할 수도 있습니다.
 메뉴는 굵은 글씨로 작성되었으며 꺽쇠를 사용해 하위 메뉴를 탐색합니다. 예: **Android Studio > Preferences**
 
 ---
-가이드가 어떻게 구성되었는지 알아봤으니, 이제 Ract Native: [네이티브 컴포넌트](https://reactnative.dev/docs/intro-react-native-components)의 기초에 대해 알아보겠습니다.
+가이드가 어떻게 구성되었는지 알아봤으니, 이제 React Native: [네이티브 컴포넌트](https://reactnative.dev/docs/intro-react-native-components)의 기초에 대해 알아보겠습니다.
