--- a/docs/5_interaction/4.md
+++ b/docs/5_interaction/4.md
@@ -12,13 +12,9 @@
 이러한 기능들은 사용자가 실수에 대한 두려움 없이 시도하고 상호작용할 수 있게 해주기 때문에, 앱을 사용하는 동안 사용자를 더 편안하게 만듭니다. 
 
 ### TouchableHighlight 및 Touchable*[#](https://reactnative.dev/docs/gesture-responder-system#touchablehighlight-and-touchable)
-
 응답 시스템은 사용하기 복잡할 수 있습니다. 그래서 "탭할 수 있는" 것들에 대한 추상`Touchable` 구현을 제공합니다. 이것은 응답 시스템을 사용하며, 탭 상호작용을 선언적으로 구성할 수 있게 해줍니다. 웹에서 버튼이나 링크를 사용하는 곳이면 어디에서든 `TouchableHighlight`을 사용하세요. 
 
-## 응답자 생명주기[#](https://reactnative.dev/docs/gesture-responder-system#responder-lifecycle)
-
-A view can become the touch responder by implementing the correct negotiation methods. There are two methods to ask the view if it wants to become responder:
-
+## 응답자 생명주기[#](https://reactnative.dev/docs/gesture-responder-system#responder-lifecycle
 뷰는 정확한 negotiation 메소드를 상속함으로써 터치 응답자(responder)가 될 수 있습니다. 뷰에게 응답자가 되고 싶은지 묻는 두 가지 메소드가 있습니다. 
 
 - `View.props.onStartShouldSetResponder: (evt) => true,` - 해당 뷰가 터치의 시작점에서 응답자가 되고 싶어하는가?
@@ -37,7 +33,6 @@ A view can become the touch responder by implementing the correct negotiation me
 - `View.props.onResponderTerminationRequest: (evt) => true` - 다른 요소가 응답자가 되고 싶어합니다. 현재 뷰의 응답자 해제를 허용하려면 true를 리턴합니다. 
 - `View.props.onResponderTerminate: (evt) => {}` - 뷰의 응답자가 해제되었습니다. `onResponderTerminationRequest`의 호출 후에 다른 뷰로 응답자가 넘어가거나, 물어보지 않고 OS로 넘어갈 수 있습니다. (iOS의 제어 센터 / 알림 센터에서 발생)
 
-`evt` is a synthetic touch event with the following form:
 `evt` 는 다음과 같은 형태의 합성 터치 이벤트입니다. 
 
 - `nativeEvent`
