--- a/docs/7_performance/1.md
+++ b/docs/7_performance/1.md
@@ -71,3 +71,22 @@
 ### 이미지의 크기를 애니메이션하면 UI 스레드 FPS 가 떨어짐
 
 iOS에서는 이미지 컴포넌트의 너비 또는 높이를 조정할 때마다 기존 이미지에서 다시 잘라서 크기가 조정됩니다. 이것은 특히 큰 이미지의 경우, 매우 비용이 높을 수 있습니다. 그렇기 때문에 이 방법 대신 `transform: [{scale}]` 스타일 속성을 사용하여 크기를 애니메이션화하면 좋습니다. 이미지를 눌러 전체 화면으로 확대할 때가 이것을 사용할 수 있는 하나의 예가 되겠습니다. 
+
+### TouchableX 뷰가 응답하지 않음
+
+경우에 따라, 터치에 반응하는 컴포넌트의 불투명도 또는 하이라이트를 조정하는 동일한 프레임에서 동작을 수행하면, `onPress` 함수가 반환될 때까지 해당 효과가 나타나지 않을 수 있습니다. `onPress` 에서 `setState` 를 수행하여 많은 작업이 발생하면서 프레임이 몇 개 손실되는 경우 이러한 문제가 발생할 수 있습니다. 이에 대한 해결 방법은,`requestAnimationFrame` 에서 `onPress` 핸들러 안에 있는 모든 작업을 감싸는 것입니다. 
+
+```jsx
+handleOnPress() {
+  requestAnimationFrame(() => {
+    this.doExpensiveAction();
+  });
+}
+```
+
+### 느린 네비게이터 전환 (Slow navigator transitions)
+위에서 언급한 대로 `Navigator` 애니메이션은 JavaScript 스레드에 의해 제어됩니다. "오른쪽에서 밀어넣는" 장면 전환을 상상해보세요. 각 프레임에서, 새로운 장면은 오른쪽에서 왼쪽으로 이동하며, 화면을 벗어나기 시작하고(x-offset이 320이라고 가정), 최종적으로 x-offset이 0인 상태로 새로운 장면이 정착합니다. 이 트랜지션 동안 각 프레임은 새로운 x-offset 을 메인 스레드로 보내야 합니다. JavaScript 스레드가 잠겨 있으면 이 작업을 수행할 수 없으므로, 해당 프레임에서 업데이트가 발생하지 않으며 애니메이션이 버벅거립니다. 
+
+이에 대한 한 가지 해결책은 Javascript 기반 애니메이션을 메인 스레드로 오프로드 할 수 있게 하는 것입니다. 위와 동일한 작업을 이 접근 방식으로 수행한다면, 전환을 시작할 때 새로운 씬에 대한 모든 x-offset 리스트를 계산하여 이를 메인 스레드로 보내 최적화 된 방식으로 실행할 수 있습니다. 이제 JavaScript 스레드는 이러한 책임에서 벗어났기 때문에, 씬을 렌더링하는 동안 프레임을 몇 개 떨어뜨려도 큰 문제가 되지 않습니다. 예쁜 화면 전환에 정신이 팔려 아마 눈치채지도 못할 것입니다. 
+
+이를 해결하는 것은 새로운 [React Navigation](https://reactnative.dev/docs/navigation) 라이브러리의 주요 목표 중 하나입니다. React Navigation의 뷰는 네이티브 컴포넌트와 [`Animated`](https://reactnative.dev/docs/animated) 라이브러리를 사용하여 메인 스레드에서 실행되는 60 FPS 애니메이션을 제공합니다. 
