--- a/docs/2_environmentSetup/2.md
+++ b/docs/2_environmentSetup/2.md
@@ -1,4 +1,5 @@
 
+
 # Integration with Existing Apps
 
   
@@ -411,10 +412,7 @@ AppRegistry.registerComponent(
 ### 3. Configure permissions for development error overlay[#](https://reactnative.dev/docs/integration-with-existing-apps#3-configure-permissions-for-development-error-overlay)
 
   
-
-앱이 Android `API level 23` 이상을 대상으로 하는 경우 개발 빌드에 대해`android.permission.SYSTEM_ALERT_WINDOW` 사용 권한을 가지고 있는지 확인합니다. `Settings.canDrawOverlays(this);`에서 이를.
-2. JavaScript에서 React Native 구성 요소를 개발하십시오.3. Android 앱에 'RactRootView'를 추가합니다. 이 보기는 React Native 구성 요소의 컨테이너 역할을 합니다.4. React Native 서버를 시작하고 기본 애플리케이션을 실행합니다.5. 애플리케이션의 React Native aspect가 예상대로 작동하는지 확인합니다.  ## Prerequisites[#](https://reactnative.dev/docs/integration-with-existing-apps#prerequisites)  [환경 설정 가이드](https://reactnative.dev/docs/environment-setup) 의 React Native CLI Quickstart에 따라 Android용 React Native 앱을 구축하기 위한 개발 환경을 구성합니다.  ### 1. Set up directory structure[#](https://reactnative.dev/docs/integration-with-existing-apps#1-set-up-directory-structure)  원활한 환경을 위해 통합 React Native 프로젝트의 새 폴더를 생성한 다음 기존 Android 프로젝트를 `/android` 하위 폴더에 복사하십시오.  ### 2. Install JavaScript dependencies[#](https://reactnative.dev/docs/integration-with-existing-apps#2-install-javascript-dependencies)  프로젝트의 루트 디렉터리로 이동한 후 다음 내용으로 새 `package.json` 파일을 만드십시오.  ```jsx{"name": "MyReactNativeApp","version": "0.0.1","private": true,"scripts": {"start":  "yarn react-native start"}}```  다음으로, [yarn package manager 설치](https://yarnpkg.com/lang/en/docs/install/) 를 확인하세요.  `react` 와 `react-native` 패키지를 설치합니다. 터미널 또는 명령 프롬프트를 연 다음, `package.json` 파일이 있는 디렉토리로 이동하여 실행하세요:  ```jsx$  yarn  add  react-native```  이렇게 하면 다음과 유사한 메시지가 출력됩니다(스크롤하여 출력을 확인합니다).  > warning "react-native@0.52.2" has unmet peer dependency "react@16.2.0".  이제 React를 설치해야합니다.:  ```jsx$  yarn  add  react@version_printed_above```  Yarn이 새 `/node_modules` 폴더를 만들었습니다. 이 폴더는 프로젝트를 빌드하는 데 필요한 모든 JavaScript 종속성을 저장합니다.  `node_modules/` 를 `.gitignore` 파일에 추가하세요.  ## Adding React Native to your app[#](https://reactnative.dev/docs/integration-with-existing-apps#adding-react-native-to-your-app)  ### Configuring maven[#](https://reactnative.dev/docs/integration-with-existing-apps#configuring-maven)  앱의 `build.gradle` 파일에 React Native 및 JSC 종속성을 추가합니다.  ```jsxdependencies {implementation  "com.android.support:appcompat-v7:27.1.1"...implementation  "com.facebook.react:react-native:+"  // From node_modulesimplementation  "org.webkit:android-jsc:+"}```  > 기본 빌드에서 항상 특정 React Native 버전을 사용하고 있는지 확인하려면 +를 npm에서 다운로드한 실제 React Native 버전으로 바꿉니다.  로컬 React Native 및 JSC maven 디렉토리에 대한 항목을 최상위 수준 `build.gradle`에 추가합니다. 다른 maven 리포지토리 위의 "allprojects" 블록에 추가해야 합니다.  ```jsxallprojects {repositories {maven {// All of React Native (JS, Android binaries) is installed from npmurl  "$rootDir/../node_modules/react-native/android"}maven {// Android JSC is installed from npmurl("$rootDir/../node_modules/jsc-android/dist")}...}...}```  > 경로가 올바른지 확인하십시오! Android Studio에서 Gradle 동기화를 실행한 후 "Failed to resolve: com.facebook.react:react-native:0.x.x" 오류가 발생하면 안 됩니다.  ### Enable native modules autolinking[#](https://reactnative.dev/docs/integration-with-existing-apps#enable-native-modules-autolinking)  [autolinking](https://github.com/react-native-community/cli/blob/master/docs/autolinking.md)을 사용하려면 몇 군데 적용해야 합니다. 먼저 다음 항목을 `settings.gradle`에 추가하십시오.:  ```jsxapply  from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)```  다음으로 `app/build.gradle` 의 맨 아래에 다음 항목을 추가합니다.:  ```jsxapply  from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)```  ### Configuring permissions[#](https://reactnative.dev/docs/integration-with-existing-apps#configuring-permissions)  다음으로 `AndroidManifest.xml`에 인터넷 사용 권한이 있는지 확인합니다.:  ```jsx<uses-permission  android:name="android.permission.INTERNET"  />```  `DevSettingsActivity` 에 접근해야 한다면 `AndroidManifest.xml`에 다음을 추가하세요:  ```jsx<activity  android:name="com.facebook.react.devsupport.DevSettingsActivity"  />```  이 기능은 개발 서버에서 JavaScript를 다시 로드할 때만 개발 모드에서 사용되므로 필요할 경우 릴리즈 빌드에서 이 기능을 제거할 수 있습니다.  ### Cleartext Traffic (API level 28+)[#](https://reactnative.dev/docs/integration-with-existing-apps#cleartext-traffic-api-level-28)  > Android 9(API 레벨 28)부터는 기본적으로 일반 텍스트 트래픽이 사용되지 않도록 설정되므로 응용 프로그램이 Metro 번들러에 연결할 수 없습니다. 아래 변경 사항을 통해 디버그 빌드에서 텍스트 트래픽을 지울 수 있습니다.  ### 1. Apply the `usesCleartextTraffic` option to your Debug `AndroidManifest.xml`[#](https://reactnative.dev/docs/integration-with-existing-apps#1-apply-the-usescleartexttraffic-option-to-your-debug-androidmanifestxml)  ```jsx<!-- ... --><applicationandroid:usesCleartextTraffic="true"  tools:targetApi="28"  ><!-- ... --></application><!-- ... -->```  이는 릴리즈 빌드에 필요하지 않습니다.  네트워크 보안 구성 및 일반 텍스트 트래픽 정책에 대해 자세히 알아보려면  [다음과 같이 하십시오](https://developer.android.com/training/articles/security-config#CleartextTrafficPermitted).  ### Code integration[#](https://reactnative.dev/docs/integration-with-existing-apps#code-integration)  이제 React Native를 통합하기 위해 기본 Android 애플리케이션을 수정하겠습니다.  ### The React Native component[#](https://reactnative.dev/docs/integration-with-existing-apps#the-react-native-component)  첫 번째 코드는 애플리케이션에 통합될 새로운 "High Score" 화면의 실제 리액트 네이티브 코드입니다.  ### 1. Create a `index.js` file[#](https://reactnative.dev/docs/integration-with-existing-apps#1-create-a-indexjs-file)  먼저 React Native 프로젝트의 루트에 빈 `index.js` 파일을 생성합니다.  `index.js`는 React Native 애플리케이션의 시작점이며 항상 필요합니다. 이 파일은 React Native 구성 요소 또는 애플리케이션의 일부인 다른 파일을 `require`로 하는 작은 파일일 수도 있고, 필요한 모든 코드를 포함할 수도 있습니다. 우리의 경우, 우리는 모든 것을 `index.js`에 넣을 것입니다.  ### 2. Add your React Native code[#](https://reactnative.dev/docs/integration-with-existing-apps#2-add-your-react-native-code)   `index.js`에서 구성 요소를 생성합니다. 여기 샘플에서는 스타일 `<View>`내에`<Text>` 구성요소를 추가할 것입니다.:  ```jsximport  React  from  'react';import {AppRegistry,StyleSheet,Text,View} from  'react-native';  class  HelloWorld  extends  React.Component {render() {return (<View  style={styles.container}><Text  style={styles.hello}>Hello, World</Text></View>);}}var  styles = StyleSheet.create({container: {flex:  1,justifyContent:  'center'},hello: {fontSize:  20,textAlign:  'center',margin:  10}});  AppRegistry.registerComponent('MyReactNativeApp',() =>  HelloWorld);```  ### 3. Configure permissions for development error overlay[#](https://reactnative.dev/docs/integration-with-existing-apps#3-configure-permissions-for-development-error-overlay)  앱이 Android `API level 23` 이상을 대상으로 하는 경우 개발 빌드에 대해`android.permission.SYSTEM_ALERT_WINDOW` 사용 권한을 가지고 있는지 확인합니다. `Settings.canDrawOverlays(this);`에서 이를 확인할 수 있습니다. 이 오류는 다른 모든 창보다 위에 표시되어야 하므로 개발 빌드에 필요합니다. API 레벨 23(Android M)에 도입된 새로운 권한 시스템으로 인해 사용자가 승인해야 합니다. 다음 코드를 `onCreate()` 메소드의 액티비티에 추가하면 됩니다.
-
+앱이 Android `API level 23` 이상을 대상으로 하는 경우 개발 빌드에 대해`android.permission.SYSTEM_ALERT_WINDOW` 사용 권한을 가지고 있는지 확인합니다. `Settings.canDrawOverlays(this);`에서 이를 확인할 수 있습니다. 이 오류는 다른 모든 창보다 위에 표시되어야 하므로 개발 빌드에 필요합니다. API 레벨 23(Android M)에 도입된 새로운 권한 시스템으로 인해 사용자가 승인해야 합니다. 다음 코드를 `onCreate()` 메소드의 액티비티에 추가하면 됩니다.
   
 
 ```jsx
@@ -802,5 +800,3 @@ Now, create a release build of your native app from within Android Studio as usu
 At this point you can continue developing your app as usual. Refer to our [debugging](https://reactnative.dev/docs/debugging) and [deployment](https://reactnative.dev/docs/running-on-device) docs to learn more about working with React Native.
 
   
-
-**Is this page useful?**
