--- a/docs/7_performance/4.md
+++ b/docs/7_performance/4.md
@@ -1,4 +1,4 @@
-# Profiling
+# 프로파일링
 내장된 프로파일러를 사용해 Javascript 스레드와 메인 스레드에서 나란히 수행된 작업에 대한 자세한 정보를 얻을 수 있습니다. 디버그 메뉴에서 성능 모니터를 선택해 프로파일러에 액세스할 수 있습니다. 
 
 iOS의 경우 Instruments는 중요한 도구이며, Android의 경우 [`systrace`](https://reactnative.dev/docs/profiling#profiling-android-ui-performance-with-systrace) 를 사용하는 방법을 배워야 합니다.
@@ -7,7 +7,7 @@ iOS의 경우 Instruments는 중요한 도구이며, Android의 경우 [`systrac
 
 Javascript를 프로파일링하는 또 다른 방법은 디버깅하는 동안 크롬 프로파일러를 사용하는 것입니다. 이 방법은 크롬에서 코드가 동작하는 것만큼 정확한 결과를 주진 않지만, 문제가 생기는 곳을 대략적으로 알 수 있습니다. 크롬 성능 탭에서 프로파일러를 실행하면, `User Timing` 아래 flame graph가 표시됩니다. 자세한 내용을 표 형식으로 보려면, 아래의 `Bottom Up` 탭을 클릭 한 다음 왼쪽 상단 메뉴에서 `DedicatedWorker Thread` 를 선택해야 합니다.
 
-#### Profiling Android UI Performance with `systrace`
+## `systrace`로 Android UI 성능 프로파일링하기
 Android는 10,000개 이상의 다양한 휴대 전화를 지원하며 소프트웨어 렌더링을 지원하도록 일반화되어 있습니다. 프레임워크 아키텍처와 수많은 하드웨어를 타겟으로 일반화할 필요가 있다는 것은, 안타깝게도 iOS에 비해 많은 공수가 듬을 의미합니다. 그럼에도 종종 개선해야할 부분이 있고, 대부분의 경우 이는 네이티브 코드의 문제가 아닙니다!
 
 이 버벅거림(jank)을 디버깅하기 위한 첫 번째 단계는 각 16ms 프레임 동안 어디에서 시간을 소요하고 있는지에 대해 기초적인 부분을 알아가는 것임. 그러기 위해 우리는 안드로이드의 표준 프로파일링 툴인 `systrace`를 사용할 것임.
@@ -50,26 +50,26 @@ trace.html 파일이 올바르게 열리지 않으면 브라우저 콘솔에서 
 >
 > 위의 스크린샷과 같이 얼룩말 줄무늬를 볼 수 있습니다. 그렇지 않은 경우 다른 장치에서 프로파일링을 시도해보세요. 삼성은 vsyn를 표시하는 데 문제가 있는 것으로 알려져 있지만, Nexus 시리즈는 대체로 신뢰성이 높습니다. 
 
-## 3. 프로세스 찾기 (Find your process)
+### 3. 프로세스 찾기 (Find your process)
 일부 패키지는 이름이 표시될 때까지 스크롤 해야 합니다. 이 경우, 커널의 어리석은 스레드 이름 제한 때문에 `book.adsmanager` 로 표시되는 `com.facebook.adsmanager`를 프로파일링했습니다. 
 
 왼쪽에는, 우측 타임라인 행에 해당하는 스레드 집합이 표시됩니다. 이 용도로 사용되는 몇 가지 스레드가 있습니다. UI 스레드(패키지 이름 또는 이름 UI 스레드), `mqt_js`, `mqt_native_modules`입니다. Android 5+에서 실행 중인 경우 `Render Thread` 도 중요합니다. 
 
-- **UI Thread** : 표준 안드로이드 측정/레이아웃/그림이 발하는 곳입니다. 오른쪽의 스레드 이름은 패키지 이름 (예: book.adsmanager) 또는 UI 스레드입니다. 이 스레드에서 볼 수 있는 이벤트는 아래와 같이 보여야 하며, `Choreographer`, `traversals`, `DispatchUI`와 관련이 있습니다. 
+- **UI 스레드** : 표준 안드로이드 측정/레이아웃/그림이 발하는 곳입니다. 오른쪽의 스레드 이름은 패키지 이름 (예: book.adsmanager) 또는 UI 스레드입니다. 이 스레드에서 볼 수 있는 이벤트는 아래와 같이 보여야 하며, `Choreographer`, `traversals`, `DispatchUI`와 관련이 있습니다. 
 ![](https://images.velog.io/images/leejiwonn/post/53dda83a-1c33-4767-83e5-0cad50363afd/image.png)
 
-- **JS Thread** : 여기에서 자바스크립드가 실행됩니다. 스레드 이름은 `mqt_js` 또는 `<...>` 장치의 커널이 얼마나 협조적인지에 따라 달라집니다. 이름이 없는 경우 식별하려면 `JSCall`, `Bridge.executeJSCall` 등의 항목을 찾아보아야 합니다.
+- **JS 스레드** : 여기에서 자바스크립드가 실행됩니다. 스레드 이름은 `mqt_js` 또는 `<...>` 장치의 커널이 얼마나 협조적인지에 따라 달라집니다. 이름이 없는 경우 식별하려면 `JSCall`, `Bridge.executeJSCall` 등의 항목을 찾아보아야 합니다.
 ![](https://images.velog.io/images/leejiwonn/post/421d003a-9414-403e-8b67-a1235b63e7cc/image.png)
 
-- **Native Modules Thread** : 여기에서 기본 모듈 호출(예: UIManager)이 실행됩니다. 스레드 이름은 `mqt_native_modules` 또는 `<...>` 입니다. 후자의 경우 이를 식별하기 위해 `Native Call`, `callJavaModuleMethod`, `onBatchCompelete` 와 같은 항목을 찾아보아야 합니다. 
+- **네이티브 모듈 스레드** : 여기에서 기본 모듈 호출(예: UIManager)이 실행됩니다. 스레드 이름은 `mqt_native_modules` 또는 `<...>` 입니다. 후자의 경우 이를 식별하기 위해 `Native Call`, `callJavaModuleMethod`, `onBatchCompelete` 와 같은 항목을 찾아보아야 합니다. 
 ![](https://images.velog.io/images/leejiwonn/post/94fd92ef-71f4-4c17-b133-0a42d1300da1/image.png)
 
-- **Bonus: Render Thread** : Android L(5.0) 이상의 버전을 사용하는 경우 애플리케이션에도 렌더 스레드가 존재합니다. 이 스레드는 UI를 그리는 데 사용되는 실제 OpenGL 명령을 생성합니다. 스레드 이름은 `RenderThread` 또는 `<...>` 임. 후자의 경우 `DrawFrame`, `queueBuffer` 같은 항목을 찾아보아야 함.
+- **보너스: 렌더 스레드** : Android L(5.0) 이상의 버전을 사용하는 경우 애플리케이션에도 렌더 스레드가 존재합니다. 이 스레드는 UI를 그리는 데 사용되는 실제 OpenGL 명령을 생성합니다. 스레드 이름은 `RenderThread` 또는 `<...>` 임. 후자의 경우 `DrawFrame`, `queueBuffer` 같은 항목을 찾아보아야 함.
 ![](https://images.velog.io/images/leejiwonn/post/578e9ba7-5798-4908-a227-15645254df98/image.png)
     
-#### 문제를 일으키는 요소 확인 (Identifying a culprit)
+## 문제를 일으키는 요소 확인하기 (Identifying a culprit)
 
-부드러운 애니메이션은 다음과 같아야 함 :
+애니메이션이 매끄럽게 동작하려면, 다음과 같아야 합니다. 
 ![](https://images.velog.io/images/leejiwonn/post/c500230f-5cb0-4c30-bd43-ccb02c792920/image.png)
 
 각 색상의 변화는 하나의 프레임입니다. 프레임을 표시하려면, 16ms 안에 모든 UI 작업이 완료되어야 합니다. 프레임 경계 가까이에서는 어떠한 스레드도 작동하지 않습니다. 이와 같은 애플리케이션 렌더링은 60FPS로 진행됩니다. 
@@ -119,3 +119,5 @@ JS 문제를 발견했다면, 실행 중인 특정 JS에서 단서를 찾아야 
 JS 스레드에 잠시 머무른 다음, 네이티브 모듈 스레드에서 일부 작업이 수행됩니다. 그리고 나서 UI 스레드에서 비용이 많이 드는 순회 작업이 수행됩니다. 
 
 상호 작용이 끝날 때까지 새로운 UI 생성을 지연시키거나, 생성 중인 UI를 단순화할 수 있는 것이 아니라면, 이러한 문제를 완화할 수 있는 빠른 해결책은 없습니다. React Native 팀은 이를 위해 새로운 UI를 생성하고 메인 스레드에서 벗어나 구성함으로써 상호 작용이 원활하게 진행될 수 있도록 하는 인프라 수준의 솔루션을 개발하고 있습니다. 
+
+
