--- a/@docs-md/document/2_environmentSetup/1_1.md
+++ b/@docs-md/document/2_environmentSetup/1_1.md
@@ -1,35 +1,39 @@
-# 개발 환경 설정
+# 개발 환경 설정 (Expo CLI)
 이 페이지는 첫 번째 React Native 앱을 설치하고 빌드하는 데 도움이 됩니다.  
 
 **모바일 개발이 처음인 경우**, 가장 쉽게 시작하는 방법은 Expo CLI를 사용하는 것입니다. Expo는 React Native를 중심으로 구축된 툴들의 모음이며, 많은 [기능들](features)을 가지고 있지만 지금 우리에게 가장 필요한 기능은 몇 분 안에 React Native 앱을 작성할 수 있게 해주는 기능입니다. 최신 버전의 Node.js와 휴대폰 또는 에뮬레이터만 있으면 됩니다. 툴을 설치하기 전에 웹 브라우저에서 먼저 React Native를 사용해보고 싶다면, [Snack](https://snack.expo.io/)을 사용해보세요. 
 
 **이미 모바일 개발 경험이 있다면**, React Native CLI를 사용해도 좋습니다. React Native CLI를 시작하려면 XCode 또는 Android Studio가 필요합니다. 이미 이러한 툴이 설치되어 있다면, 몇 분 내에 바로 실행할 수 있습니다. 설치되어 있지 않다면, 설치 및 설정에 한 시간 정도가 소요됩니다. 
 
----
-
-**Expo CLI Quickstart**
+## Expo CLI Quickstart
 Node 12 LTS 이상 버전이 설치되어 있다고 가정하고, npm을 사용해 Expo CLI 커맨드 라인 유틸리티를 설치할 수 있습니다.  
-npm  
-`npm install -g expo-cli`  
-Yarn  
-`yarn global add expo-cli`  
 
-그리고 나서 "AwesomeProject"라는 이름의 새로운 React Native 프로젝트를 생성하기 위해 다음 명령을 실행합니다.  
-npm  
-```
-expo init AwesomeProject
+- npm
+  `npm install -g expo-cli` 
+  
+  그리고 "AwesomeProject"라는 이름의 새로운 React Native 프로젝트를 생성하기 위해 다음 명령을 실행합니다.  
 
-cd AwesomeProject
-npm start # expo start를 사용해도 됨
-```  
-Yarn  
-``` 
-expo init AwesomeProject
+  ```jsx
+  expo init AwesomeProject
 
-cd AwesomeProject
-yarn start # expo start를 사용해도 됨
-```
-위 명령을 실행하면 개발 서버가 시작됩니다. 
+  cd AwesomeProject
+  npm start # you can also use: expo start
+  ```
+  위 명령을 실행하면 개발 서버가 시작됩니다. 
+  
+- Yarn
+  `yarn global add expo-cli` 
+  
+  그리고 "AwesomeProject"라는 이름의 새로운 React Native 프로젝트를 생성하기 위해 다음 명령을 실행합니다.  
+
+  ```jsx
+  expo init AwesomeProject
+
+  cd AwesomeProject
+  yarn start # you can also use: expo start
+  ```
+  위 명령을 실행하면 개발 서버가 시작됩니다. 
+
 
 ## React Native 애플리케이션 실행하기
 Expo 클라이언트 앱을 iOS나 Android 휴대폰에 설치하고, 컴퓨터와 동일한 무선 네트워크에 연결합니다. Android의 경우, 터미널에서 프로젝트를 열고 Expo 앱으로 QR 코드를 스캔합니다. iOS의 경우, 카메라 앱의 내장 QR 코드 스캐너를 사용합니다. 
@@ -64,8 +68,3 @@ Expo를 사용해 프로젝트를 만들 때 네이티브 코드를 빌드하지
 Expo CLI는 프로젝트가 Expo 클라이언트 앱에서 지원되는 최신 React Native 버전을 사용하도록 설정합니다. Expo 클라이언트 앱은 일반적으로 React Native 버전이 stable로 릴리즈되고 나서 약 일주일 후에 해당 React Native 버전을 지원하게 됩니다. 어떤 버전이 지원되는지 알아보려면 [이 문서](https://docs.expo.io/versions/latest/sdk/overview/#sdk-version)를 확인해보세요.  
 
 React Native를 이미 존재하는 프로젝트에 통합하는 중이라면, Expo CLI를 건너뛰고 바로 네이티브 빌드 환경 설정으로 가세요. 위에서 "React Native CLI Quickstart"를 선택해 React Native 네이티브 빌드 환경 설정에 대한 가이드를 볼 수 있습니다. 
-
----
-
-**React Native CLI Quickstart**
-보류
