code block language setting

--- a/@docs-md/document/1_theBasics/4.md
+++ b/@docs-md/document/1_theBasics/4.md
@@ -6,7 +6,7 @@
 
 **examples**
 Handling Text Input 텍스트 입력 처리하기
-```
+```jsx
 import React, { useState } from 'react';
 import { Text, TextInput, View } from 'react-native';
 
