--- a/@docs-md/document/1_theBasics/7.md
+++ b/@docs-md/document/1_theBasics/7.md
@@ -67,7 +67,7 @@ Execution failed for task ':app:installDebug'.
 
 #### react-native init 중단
 시스템에서 `npx react-native init` 를 실행하는 것이 중단되는 문제가 발생하면, 세부 모드에서 다시 실행하고 [#2797](https://github.com/facebook/react-native/issues/2797)를 참조해 일반적인 원인을 확인하세요. 
-```
+```jsx
 npx react-native init --verbose
 ```
 
@@ -75,6 +75,6 @@ npx react-native init --verbose
 
 ### Case 1: Error "code":"ENOSPC","errno":"ENOSPC"
 [inotify](https://github.com/guard/listen/wiki) (used by watchman on Linux)에서 모니터링할 수 있는 디렉토리 수로 인해 발생한 문제입니다. 이 문제를 해결하려면, 터미널 창에서 다음 명령을 실행하세요.  
-```
+```jsx
 echo fs.inotify.max_user_watches=582222 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
 ```
