--- a/@docs-md/document/1_theBasics/8.md
+++ b/@docs-md/document/1_theBasics/8.md
@@ -89,11 +89,9 @@ if (majorVersionIOS <= 9) {
 플랫폼별 코드가 더 복잡한 경우, 코드를 별도의 파일로 분리하는 것을 고려해야 합니다. React Native는 파일이 `.ios.` 또는 `.android.` 확장자를 가지고 있을 때 인식하고 다른 컴포넌트에서 필요로 할 때 관련된 플랫폼 파일을 로드할 수 있습니다. 
 
 예를 들어, 프로젝트에 다음 파일들을 가지고 있다고 해봅시다.  
-```
+```jsx
 BigButton.ios.js
 BigButton.android.js
 ```
 
 컴포넌트를 다음과 같이 import 할 수 있습니다. 
-```
-import Big
