--- a/@docs-md/document/7_performance/5.md
+++ b/@docs-md/document/7_performance/5.md
@@ -27,7 +27,7 @@ React Native 앱에서 [Hermes](https://github.com/facebook/hermes)를 사용해
 
 ## CLI에서 명령 실행하기
 [React Native CLI]()를 사용해 Hermes 추적 프로파일을 크롬 추적 프로파일로 변환한 다음, 로컬으로 가져올 수 있습니다.  
-```
+```jsx
 npx react-native profile-hermes [destinationDir]
 ```
 
@@ -35,7 +35,7 @@ npx react-native profile-hermes [destinationDir]
 소스 맵은 프로파일을 강화하고 추적 이벤트를 응용 프로그램 코드와 연결하는 데 사용됩니다. 앱이 개발 모드에서 실행 중인 경우 `bundleInDebug`를 활성화하여 헤르메스 추적 프로파일을 크롬 추적 프로파일로 변환할 때, 소스 맵을 자동으로 생성할 수 있습니다. 이렇게 하면 React Native가 프로세스 실행 중에 번들을 빌드할 수 있습니다. 방법은 다음과 같습니다.
 
 1. 앱의 `android/app/build.gradle` 파일에 다음을 추가합니다.  
-  ```
+  ```jsx
   project.ext.react = [
     bundleInDebug: true,
   ]
@@ -43,13 +43,12 @@ npx react-native profile-hermes [destinationDir]
 > `build.gradle`을 변경할 때마다 빌드를 정리해야 합니다. 
 
 2. 다음을 실행해 빌드를 정리합니다.  
-```
+```jsx
 cd android && ./gradlew clean
-
 ```
 
 3. 앱을 실행합니다.  
-```
+```jsx
 npx react-native run-android
 ```
 
