--- a/@docs-md/document/8_javascriptRuntime/3.md
+++ b/@docs-md/document/8_javascriptRuntime/3.md
@@ -23,19 +23,19 @@ React Native의 이전 버전을 기반으로 하는 기존 앱이 있는 경우
   ]
 ```
 또한 ProGuard를 사용하는 경우, `proguard-rules.pro` 에서 다음 규칙을 추가해야 합니다. 
-```
+```jsx
 -keep class com.facebook.hermes.unicode.** { *; }
 -keep class com.facebook.jni.** { *; }
 ```
 
 다음으로, 앱이 한 번 이상 빌드된 경우 빌드를 정리해야 합니다. 
-```
+```jsx
 $ cd android && ./gradlew clean
 ```
 
 끝입니다! 이제 정상적으로 앱을 개발하고 배포할 수 있습니다.
 
-```
+```jsx
 $ npx react-native run-android
 ```
 
@@ -50,12 +50,12 @@ $ npx react-native run-android
 
 JavaScript 에서 Hermes가 사용되고 있는지 확인하기 위해 전역 변수 `HermesInternal` 를 사용할 수 있습니다. 
 
-```
+```jsx
 const isHermes = () => !!global.HermesInternal;
 ```
 
 Hermes 의 장점을 확인하려면, 다음과 같이 앱의 배포 빌드와 디플로이먼트를 만들어 비교해보면 됩니다. 
-```
+```jsx
 $ npx react-native run-android --variant release
 ```
 이는 빌드 중에 JavaScript를 bytecode로 컴파일하여, 디바이스에서 앱의 시작 속도를 향상시킵니다. 
