--- a/@docs-md/document/1_theBasics/3.md
+++ b/@docs-md/document/1_theBasics/3.md
@@ -282,7 +282,7 @@ props가 컴포넌트가 어떻게 렌더링될지 설정하기 위해 사용하
 [React의 `useState` Hook](https://reactjs.org/docs/hooks-state.html)을 호출해 컴포넌트에 state를 추가할 수 있습니다. Hook은 리액트 기능을 "후크"할 수 있게 해주는 일종의 함수입니다. 예를 들어, `useState` 는 함수형 컴포넌트에 state를 추가할 수 있게 해주는 Hook입니다. React 문서에서 [다른 종류의 Hook](https://reactjs.org/docs/hooks-intro.html)에 대해 더 자세히 알아볼 수 있습니다. 
 
 State
-```
+```jsx
 import React, { useState } from "react";
 import { Button, Text, View } from "react-native";
 
