--- a/@docs-md/document/2_environmentSetup/2.md
+++ b/@docs-md/document/2_environmentSetup/2.md
@@ -561,23 +561,24 @@ return  super.onKeyUp(keyCode, event);
 
   
 
-Now your activity is ready to run some JavaScript code.
+이제 activity는 JavaScript code를 실행할 준비가 되었습니다.
 
   
 
-### Test your integration[#](https://reactnative.dev/docs/integration-with-existing-apps#test-your-integration)
+### 통합 테스트[#](https://reactnative.dev/docs/integration-with-existing-apps#test-your-integration)
 
   
 
-You have now done all the basic steps to integrate React Native with your current application. Now we will start the [Metro bundler](https://facebook.github.io/metro/) to build the `index.bundle` package and the server running on localhost to serve it.
+
+이제 React Native를 현재 애플리케이션과 통합하기위한 모든 기본 단계를 완료했습니다. 이제 [Metro bundler](https://facebook.github.io/metro/)를 시작하여 `index.bundle` 패키지를 빌드하고, 이를 제공하기 위해 localhost에서 실행중인 서버를 빌드합니다.
 
   
 
-### 1. Run the packager[#](https://reactnative.dev/docs/integration-with-existing-apps#1-run-the-packager)
+### 1. 패키저 실행[#](https://reactnative.dev/docs/integration-with-existing-apps#1-run-the-packager)
 
   
 
-To run your app, you need to first start the development server. To do this, run the following command in the root directory of your React Native project:
+앱을 실행하려면 먼저 개발 서버를 시작해야합니다. 이를 위해서, React Native 프로젝트의 루트 디렉터리에서 다음 명령을 실행하세요:
 
   
 
@@ -589,15 +590,14 @@ $  yarn  start
 
   
 
-### 2. Run the app[#](https://reactnative.dev/docs/integration-with-existing-apps#2-run-the-app)
+### 2. 앱 실행하기[#](https://reactnative.dev/docs/integration-with-existing-apps#2-run-the-app)
 
   
 
-Now build and run your Android app as normal.
+이제 정상적으로 Android 앱을 빌드하고 실행합니다.
 
-  
 
-Once you reach your React-powered activity inside the app, it should load the JavaScript code from the development server and display:
+앱 내에서 React 기반 활동에 도달하면 개발 서버에서 JavaScript 코드를 로드하고 다음을 표시해야합니다:
 
   
 
@@ -606,13 +606,11 @@ Once you reach your React-powered activity inside the app, it should load the Ja
 
   
 
-### Creating a release build in Android Studio[#](https://reactnative.dev/docs/integration-with-existing-apps#creating-a-release-build-in-android-studio)
+### Android Studio에서 릴리스 빌드 생성하기[#](https://reactnative.dev/docs/integration-with-existing-apps#creating-a-release-build-in-android-studio)
 
   
+Android Studio를 사용하여 릴리스 빌드를 만들 수 있습니다! 기존의 native Android 앱의 release build를 만드는 것만큼 빠릅니다. 모든 릴리스 빌드 전에 수행해야하는 추가적인 단계가 하나 있습니다. native Android 앱에 포함될 React Native 번들을 생성하려면 다음을 실행해야합니다:
 
-You can use Android Studio to create your release builds too! It’s as quick as creating release builds of your previously-existing native Android app. There’s one additional step, which you’ll have to do before every release build. You need to execute the following to create a React Native bundle, which will be included with your native Android app:
-
-  
 
 ```jsx
 
@@ -621,19 +619,16 @@ $  npx  react-native  bundle --platform  android --dev  false --entry-file  inde
 ```
 
   
-
-> Don’t forget to replace the paths with correct ones and create the assets folder if it doesn’t exist.
-
+> 경로를 올바른 경로로 바꾸고, 만약 assets 폴더가 없다면 이를 만드는 것을 잊지 마십시오.
   
 
-Now, create a release build of your native app from within Android Studio as usual and you should be good to go!
+이제 기존과 같이 Android Studio 내에서 native 앱의 릴리스 빌드를 생성하면됩니다.
 
   
 
 ### Now what?[#](https://reactnative.dev/docs/integration-with-existing-apps#now-what)
 
   
-
-At this point you can continue developing your app as usual. Refer to our [debugging](https://reactnative.dev/docs/debugging) and [deployment](https://reactnative.dev/docs/running-on-device) docs to learn more about working with React Native.
+이 시점에서 기존처럼 앱을 계속 개발할 수 있습니다. React Native 작업에 대한 자세한 내용은 [debugging](https://reactnative.dev/docs/debugging) 및 [deployment](https://reactnative.dev/docs/running-on-device)문서를 참조하세요.
 
   
