--- a/@docs-md/document/2_environmentSetup/1-2_4.md
+++ b/@docs-md/document/2_environmentSetup/1-2_4.md
@@ -1,113 +1,99 @@
-# 개발 환경 설정
+<-- Tab: React Native CLI Quickstart -->
 
+<-- Inner Tab: Linux/Android -->
 
-이 페이지는 React Native 앱을 설치하고 빌드하는 첫 걸음에 도움이 됩니다.
+# Setting up the development environment
 
-**모바일 개발이 처음 인 경우**, 시작하는 가장 쉬운 방법은 Expo CLI를 사용하는 것입니다. Expo는 React Native를 중심으로 구축 된 도구 모음이며 [features](https://expo.io/features)이 많지만 현재 가장 관련성이 높은 기능은 몇 분 안에 React Native 앱을 작성할 수 있다는 것입니다. 최신 버전의 Node.js와 핸드폰 또는 에뮬레이터만 있으면 됩니다. 도구를 설치하기 전에 웹 브라우저에서 직접 React Native를 사용해보고 싶다면 [Snack](https://snack.expo.io/)를 사용해보세요.
+This page will help you install and build your first React Native app.
 
-**이미 모바일 개발에 익숙한 경우**, React Native CLI를 사용할 수 있습니다. 시작하려면 Xcode 또는 Android Studio가 필요합니다. 이러한 도구 중 하나가 이미 설치되어있는 경우 몇 분 내에 시작하여 실행할 수 있습니다. 설치되지 않은 경우 설치 및 구성하는 데 약 1 시간이 소요됩니다.
+**If you are new to mobile development**, the easiest way to get started is with Expo CLI. Expo is a set of tools built around React Native and, while it has many [features](https://expo.io/features), the most relevant feature for us right now is that it can get you writing a React Native app within minutes. You will only need a recent version of Node.js and a phone or emulator. If you'd like to try out React Native directly in your web browser before installing any tools, you can try out [Snack](https://snack.expo.io/).
 
-## React Native CLI 빠르게 시작하기
+**If you are already familiar with mobile development**, you may want to use React Native CLI. It requires Xcode or Android Studio to get started. If you already have one of these tools installed, you should be able to get up and running within a few minutes. If they are not installed, you should expect to spend about an hour installing and configuring them.
 
-프로젝트에서 네이티브 코드를 빌드해야하는 경우 다음 지침을 따르세요. 예를 들어 React Native를 기존 애플리케이션에 통합하거나 Expo에서 "ejected"한 경우 이 섹션이 필요합니다.
+## React Native CLI Quickstart
 
-지침은 개발 운영 체제 및 iOS 또는 Android 용 개발을 시작할지 여부에 따라 약간 다릅니다. Android와 iOS 공용으로 개발하고 싶다면 괜찮습니다. 설정이 약간 다르기 때문에 어떤 것을 시작할지 하나를 선택할 수 있습니다.
+Follow these instructions if you need to build native code in your project. For example, if you are integrating React Native into an existing application, or if you "ejected" from Expo, you'll need this section.
 
-#### OS 개발[#](https://reactnative.dev/docs/environment-setup#development-os): macOS
+The instructions are a bit different depending on your development operating system, and whether you want to start developing for iOS or Android. If you want to develop for both Android and iOS, that's fine - you can pick one to start with, since the setup is a bit different.
 
-#### 타겟 OS[#](https://reactnative.dev/docs/environment-setup#target-os): Android
+#### Development OS[#](https://reactnative.dev/docs/environment-setup#development-os): Linux
+
+#### Target OS[#](https://reactnative.dev/docs/environment-setup#target-os-2): Android
 
 ## Installing dependencies[#](https://reactnative.dev/docs/environment-setup#installing-dependencies)
 
-Node, Watchman, React Native command line 인터페이스, JDK 및 Android Studio가 필요합니다.
+You will need Node, the React Native command line interface, a JDK, and Android Studio.
 
-선택한 편집기를 사용하여 앱을 개발할 수 있지만 Android 용 React Native 앱을 빌드하는 데 필요한 도구를 설정하려면 Android Studio를 설치해야합니다.
+While you can use any editor of your choice to develop your app, you will need to install Android Studio in order to set up the necessary tooling to build your React Native app for Android.
 
+### Node
 
-### Node & Watchman
-
-[Homebrew](http://brew.sh/)를 사용하여 Node 및 Watchman을 설치하는 것이 좋습니다. Homebrew를 설치 한 후 터미널에서 다음 명령을 실행하십시오:
-
-```jsx
-brew install node
-brew install watchman
-```
-
-시스템에 Node를 이미 설치 한 경우 Node 12 이상인지 확인하십시오.
-
-[Watchman](https://facebook.github.io/watchman)은 파일 시스템의 변경 사항을 감시하기위한 Facebook 도구입니다. 더 나은 성능을 위해 설치하는 것이 좋습니다.
-
+Follow the [installation instructions for your Linux distribution](https://nodejs.org/en/download/package-manager/) to install Node 12 or newer.
 
 ### Java Development Kit
 
-[Homebrew](http://brew.sh/)를 사용하여 JDK을 설치하는 것이 좋습니다. Homebrew를 설치 한 후 터미널에서 다음 명령을 실행하십시오:
-
-```jsx
-brew install --cask adoptopenjdk/openjdk/adoptopenjdk8
-```
-
-시스템에 이미 JDK를 설치 한 경우 JDK 8 이상인지 확인하십시오.
-
+React Native requires at least the version 8 of the Java SE Development Kit (JDK). You may download and install [OpenJDK](http://openjdk.java.net/) from [AdoptOpenJDK](https://adoptopenjdk.net/) or your system packager. You may also [Download and install Oracle JDK 14](https://www.oracle.com/java/technologies/javase-jdk14-downloads.html) if desired.
 
 ### Android development environment
 
-Android 개발을 처음 접하는 경우 개발 환경 설정이 다소 지루할 수 있습니다. Android 개발에 이미 익숙한 경우 구성해야 할 몇 가지 사항이 있습니다. 두 경우 모두 다음 몇 단계를 주의 깊게 따르십시오:
-
+Setting up your development environment can be somewhat tedious if you're new to Android development. If you're already familiar with Android development, there are a few things you may need to configure. In either case, please make sure to carefully follow the next few steps.
 
 #### 1. Install Android Studio
 
-[Download and install Android Studio](https://developer.android.com/studio/index.html). Android Studio 설치 마법사에서 다음 모든 항목 옆의 확인란이 선택되어 있는지 확인합니다:
+[Download and install Android Studio](https://developer.android.com/studio/index.html). While on Android Studio installation wizard, make sure the boxes next to all of the following items are checked:
 
 - `Android SDK`
 - `Android SDK Platform`
 - `Android Virtual Device`
 
-그런 다음 "다음"을 클릭하여 이러한 구성 요소를 모두 설치합니다.
+Then, click "Next" to install all of these components.
 
-> 확인란이 회색으로 표시되면 나중에 이러한 구성 요소를 설치할 수 있습니다.
+> If the checkboxes are grayed out, you will have a chance to install these components later on.
 
-설정이 완료되고 시작 화면이 표시되면 다음 단계로 진행합니다.
-
+Once setup has finalized and you're presented with the Welcome screen, proceed to the next step.
 
 #### 2. Install the Android SDK
 
-Android Studio는 기본적으로 최신 Android SDK를 설치합니다. 그러나 네이티브 코드로 React Native 앱을 빌드하려면 특히`Android 10 (Q)` SDK가 필요합니다. Android Studio의 SDK Manager를 통해 추가 Android SDK를 설치할 수 있습니다.
+Android Studio installs the latest Android SDK by default. Building a React Native app with native code, however, requires the `Android 10 (Q)` SDK in particular. Additional Android SDKs can be installed through the SDK Manager in Android Studio.
 
-이를 위해 Android Studio를 열고 "Configure" 버튼을 클릭 한 다음 "SDK Manager"를 선택합니다.
+To do that, open Android Studio, click on "Configure" button and select "SDK Manager".
 
-![Android Studio Welcome](https://reactnative.dev/assets/images/GettingStartedAndroidStudioWelcomeMacOS-cbb28b4b70c4158c1afd02ddb6b12f4a.png)
+> The SDK Manager can also be found within the Android Studio "Preferences" dialog, under **Appearance & Behavior** → **System Settings** → **Android SDK**.
 
-> SDK Manager는 **Appearance & Behavior** → **System Settings** → **Android SDK** 의 Android Studio "Preferences" 대화 상자에서도 찾을 수 있습니다.
-
-SDK Manager 내에서 "SDK Platforms" 탭을 선택한 다음 오른쪽 하단의 "Show Package Details" 옆에있는 확인란을 선택합니다. `Android 10 (Q)`항목을 찾아 확장 한 후 다음 항목이 선택되었는지 확인합니다:
+Select the "SDK Platforms" tab from within the SDK Manager, then check the box next to "Show Package Details" in the bottom right corner. Look for and expand the `Android 10 (Q)` entry, then make sure the following items are checked:
 
 - `Android SDK Platform 29`
 - `Intel x86 Atom_64 System Image` or `Google APIs Intel x86 Atom System Image`
 
-그런 다음 "SDK Tools" 탭을 선택하고 여기에서 "Show Package Details" 옆의 확인란도 선택합니다. "Android SDK Build-Tools" 항목을 찾아 펼친 다음, `29.0.2`이 선택되어 있는지 확인하고 "Android SDK Command-line Tools (latest)"를 확인합니다.
+Next, select the "SDK Tools" tab and check the box next to "Show Package Details" here as well. Look for and expand the "Android SDK Build-Tools" entry, then make sure that `29.0.2` is selected.
 
-마지막으로 "Apply" 을 클릭하여 Android SDK 및 관련 빌드 도구를 다운로드하고 설치합니다.
-
+Finally, click "Apply" to download and install the Android SDK and related build tools.
 
 #### 3. Configure the ANDROID_HOME environment variable
 
-React Native 도구는 네이티브 코드로 앱을 빌드하기 위해 몇 가지 환경 변수를 설정해야합니다.
+The React Native tools require some environment variables to be set up in order to build apps with native code.
 
-`$HOME/.bash_profile` 또는 `$HOME/.bashrc`(`zsh`를 사용하는 경우 `~/.zprofile` or `~/.zshrc`) 구성 파일에 다음 행을 추가하십시오:
+Add the following lines to your `$HOME/.bash_profile` or `$HOME/.bashrc` (if you are using `zsh` then `~/.zprofile` or `~/.zshrc`) config file:
 
-```jsx
-export ANDROID_HOME=$HOME/Library/Android/sdk
+```sh
+export ANDROID_HOME=$HOME/Android/Sdk
 export PATH=$PATH:$ANDROID_HOME/emulator
 export PATH=$PATH:$ANDROID_HOME/tools
 export PATH=$PATH:$ANDROID_HOME/tools/bin
 export PATH=$PATH:$ANDROID_HOME/platform-tools
 ```
 
-> `.bash_profile` 은 `bash` 에만 해당됩니다. 다른 shell 을 사용하는 경우 적절한 shell 별 구성 파일을 편집해야합니다.
+> `.bash_profile` is specific to `bash`. If you're using another shell, you will need to edit the appropriate shell-specific config file.
 
 Type `source $HOME/.bash_profile` for `bash` or `source $HOME/.zprofile` to load the config into your current shell. Verify that ANDROID_HOME has been set by running `echo $ANDROID_HOME` and the appropriate directories have been added to your path by running `echo $PATH`.
 
 > Please make sure you use the correct Android SDK path. You can find the actual location of the SDK in the Android Studio "Preferences" dialog, under **Appearance & Behavior** → **System Settings** → **Android SDK**.
+
+### Watchman
+
+Follow the [Watchman installation guide](https://facebook.github.io/watchman/docs/install/#buildinstall) to compile and install Watchman from source.
+
+> [Watchman](https://facebook.github.io/watchman/docs/install/) is a tool by Facebook for watching changes in the filesystem. It is highly recommended you install it for better performance and increased compatibility in certain edge cases (translation: you may be able to get by without installing this, but your mileage may vary; installing this now may save you from a headache later).
 
 ### React Native Command Line Interface
 
@@ -119,7 +105,7 @@ React Native has a built-in command line interface. Rather than install and mana
 
 React Native has a built-in command line interface, which you can use to generate a new project. You can access it without installing anything globally using `npx`, which ships with Node.js. Let's create a new React Native project called "AwesomeProject":
 
-```jsx
+```shell
 npx react-native init AwesomeProject
 ```
 
@@ -129,13 +115,13 @@ This is not necessary if you are integrating React Native into an existing appli
 
 If you want to start a new project with a specific React Native version, you can use the `--version` argument:
 
-```jsx
+```shell
 npx react-native init AwesomeProject --version X.XX.X
 ```
 
 You can also start a project with a custom React Native template, like TypeScript, with `--template` argument:
 
-```jsx
+```shell
 npx react-native init AwesomeTSProject --template react-native-template-typescript
 ```
 
@@ -157,6 +143,8 @@ If you use Android Studio to open `./AwesomeProject/android`, you can see the li
 
 If you have recently installed Android Studio, you will likely need to [create a new AVD](https://developer.android.com/studio/run/managing-avds.html). Select "Create Virtual Device...", then pick any Phone from the list and click "Next", then select the **Q** API Level 29 image.
 
+> We recommend configuring [VM acceleration](https://developer.android.com/studio/run/emulator-acceleration.html#vm-linux) on your system to improve performance. Once you've followed those instructions, go back to the AVD Manager.
+
 Click "Next" then "Finish" to create your AVD. At this point you should be able to click on the green triangle button next to your AVD to launch it, then proceed to the next step.
 
 ## Running your React Native application
@@ -167,7 +155,7 @@ First, you will need to start Metro, the JavaScript bundler that ships with Reac
 
 To start Metro, run `npx react-native start` inside your React Native project folder:
 
-```jsx
+```shell
 npx react-native start
 ```
 
@@ -175,19 +163,17 @@ npx react-native start
 
 > If you use the Yarn package manager, you can use `yarn` instead of `npx` when running React Native commands inside an existing project.
 
-> If you're familiar with web development, Metro is a lot like webpack—for React Native apps. Unlike Kotlin or Java, JavaScript isn't compiled—and neither is React Native. Bundling isn't the same as compiling, but it can help improve startup performance and translate some platform-specific JavaScript into more JavaScript.
+> If you're familiar with web development, Metro is a lot like webpack—for React Native apps. Unlike Kotlin or Java, JavaScript isn't compiled—and neither is React Native. Bundling isn't the same as compiling, but it can help improve startup performance and translate some platform-specific JavaScript into more widely supported JavaScript.
 
 ### Step 2: Start your application
 
 Let Metro Bundler run in its own terminal. Open a new terminal inside your React Native project folder. Run the following:
 
-```jsx
+```shell
 npx react-native run-android
 ```
 
 If everything is set up correctly, you should see your new app running in your Android emulator shortly.
-
-![AwesomeProject on Android](https://reactnative.dev/assets/images/GettingStartedAndroidSuccessMacOS-b854b8ed8b950832a43645e723a98961.png)
 
 `npx react-native run-android` is one way to run your app - you can also run it directly from within Android Studio.
 
@@ -198,7 +184,7 @@ If everything is set up correctly, you should see your new app running in your A
 Now that you have successfully run the app, let's modify it.
 
 - Open `App.js` in your text editor of choice and edit some lines.
-- Press the `R` key twice or select `Reload` from the Developer Menu (`⌘M`) to see your changes!
+- Press the `R` key twice or select `Reload` from the Developer Menu (`Ctrl + M`) to see your changes!
 
 ### That's it!
 
