--- a/@docs-md/document/2_environmentSetup/5.md
+++ b/@docs-md/document/2_environmentSetup/5.md
@@ -1,31 +1,31 @@
 # Out-of-Tree Platforms
 
-React Native is not only for Android and iOS - there are community-supported projects that bring it to other platforms, such as:
+React Native는 Android 및 iOS 만을 위한 것은 아닙니다 - 다음과 같이 다른 플랫폼으로 가져 오는 커뮤니티 지원 프로젝트가 있습니다:
 
-- [React Native Windows](https://github.com/Microsoft/react-native-windows) - React Native support for targeting Microsoft's Universal Windows Platform (UWP).
-- [React Native macOS](https://github.com/microsoft/react-native-macos) - React Native fork targeting macOS and Cocoa.
-- [React Native DOM](https://github.com/vincentriemer/react-native-dom) - An experimental, comprehensive port of React Native to the web. (Not to be confused with [React Native Web](https://github.com/necolas/react-native-web), which has different goals)
-- [React Native Turbolinks](https://github.com/lazaronixon/react-native-turbolinks) - React Native adapter for building hybrid apps with Turbolinks 5.
-- [React Native Desktop](https://github.com/status-im/react-native-desktop) - A project aiming to bring React Native to the Desktop with Qt's QML. A fork of [React Native Ubuntu](https://github.com/CanonicalLtd/react-native/), which is no longer maintained.
-- [React Native tvOS](https://github.com/react-native-community/react-native-tvos) - adaptation of React Native for Apple tvOS
-- [alita](https://github.com/areslabs/alita) - An experimental, comprehensive port of React Native to mini-program(微信小程序).
-- [Proton Native](https://github.com/kusti8/proton-native) - A wrapper for React Native, using Qt to target Linux, MacOS, and Windows.
+- [React Native Windows](https://github.com/Microsoft/react-native-windows) - Microsoft의 Universal Windows 플랫폼(UWP)을 대상으로하는 React Native 지원.
+- [React Native macOS](https://github.com/microsoft/react-native-macos) - macOS 및 Cocoa를 대상으로하는 React Native 포크.
+- [React Native DOM](https://github.com/vincentriemer/react-native-dom) - 웹에 대한 React Native의 실험적이고 포괄적인 포트입니다. (목적이 다른 [React Native Web](https://github.com/necolas/react-native-web)과 혼동하지 마세요.)
+- [React Native Turbolinks](https://github.com/lazaronixon/react-native-turbolinks) - Turbolinks 5로 하이브리드 앱을 빌드하기위한 React Native 어댑터.
+- [React Native Desktop](https://github.com/status-im/react-native-desktop) - Qt의 QML을 사용하여 React Native를 데스크톱에 가져 오는 것을 목표로하는 프로젝트입니다. 더 이상 유지되지 않는 [React Native Ubuntu](https://github.com/CanonicalLtd/react-native/)의 포크입니다.
+- [React Native tvOS](https://github.com/react-native-community/react-native-tvos) - Apple tvOS를 위한 React Native의 적응.
+- [alita](https://github.com/areslabs/alita) - mini-program(微信小程序)에 대한 React Native의 실험적이고 포괄적인 포트.
+- [Proton Native](https://github.com/kusti8/proton-native) - Qt를 사용하는 Linux, MacOS 및 Windows를 대상으로 한 React Native 용 래퍼.
 
-## Creating your own React Native platform[#](https://reactnative.dev/docs/out-of-tree-platforms#creating-your-own-react-native-platform)
+## 나만의 React Native 플랫폼 만들기[#](https://reactnative.dev/docs/out-of-tree-platforms#creating-your-own-react-native-platform)
 
-Right now the process of creating a React Native platform from scratch is not very well documented - one of the goals of the upcoming re-architecture ([Fabric](https://reactnative.dev/blog/2018/06/14/state-of-react-native-2018)) is to make maintaining a platform easier.
+현재 React Native 플랫폼을 처음부터 만드는 과정은 문서화가 잘되어 있지 않습니다 - 다가오는 재구축의 목표([Fabric](https://reactnative.dev/blog/2018/06/14/state -of-react-native-2018)) 중 하나는 플랫폼을보다 쉽게 유지 관리하는 것입니다.
 
-### Bundling[#](https://reactnative.dev/docs/out-of-tree-platforms#bundling)
+### 번들링[#](https://reactnative.dev/docs/out-of-tree-platforms#bundling)
 
-As of React Native 0.57 you can now register your React Native platform with React Native's JavaScript bundler, [Metro](https://facebook.github.io/metro/). This means you can pass `--platform example` to `npx react-native bundle`, and it will look for JavaScript files with the `.example.js` suffix.
+React Native 0.57부터 이제 React Native의 JavaScript 번들러 [Metro](https://facebook.github.io/metro/)에 React Native 플랫폼을 등록 할 수 있습니다. 즉,`--platform example`을`npx react-native bundle`에 전달할 수 있으며`.example.js` 접미사가있는 JavaScript 파일을 찾습니다.
 
-To register your platform with RNPM, your module's name must match one of these patterns:
+RNPM에 플랫폼을 등록하려면 모듈 이름이 다음 패턴 중 하나와 일치해야합니다:
 
-- `react-native-example` - It will search all top-level modules that start with `react-native-`
-- `@org/react-native-example` - It will search for modules that start with `react-native-` under any scope
-- `@react-native-example/module` - It will search in all modules under scopes with names starting with `@react-native-`
+- `react-native-example` - `react-native-` 으로 시작하는 모든 최상위 모듈을 검색합니다.
+- `@org/react-native-example` - 모든 범위에서`react-native-`로 시작하는 모듈을 검색합니다.
+- `@react-native-example/module` - 이름이`@ react-native-`로 시작하는 범위 아래의 모든 모듈에서 검색됩니다.
 
-You must also have an entry in your `package.json` like this:
+또한 다음과 같은 항목이 `package.json`에 있어야합니다:
 
 ```json
 {
@@ -38,4 +38,5 @@ You must also have an entry in your `package.json` like this:
 }
 ```
 
-`"providesModuleNodeModules"` is an array of modules that will get added to the Haste module search path, and `"platforms"` is an array of platform suffixes that will be added as valid platforms.
+` "providesModuleNodeModules"`는 Haste 모듈 검색 경로에 추가 될 모듈의 배열이고` "platforms"`는 유효한 플랫폼으로 추가 될 플랫폼 접미사의 배열입니다.
+
