--- a/@docs-md/document/2_environmentSetup/2-2.md
+++ b/@docs-md/document/2_environmentSetup/2-2.md
@@ -174,7 +174,7 @@ end
 $ pod install
 ```
 
-You should see output such as:
+다음과 같은 출력을 확인할 수 있습니다:
 
 ```shell
 Analyzing dependencies
@@ -259,7 +259,8 @@ AppRegistry.registerComponent('RNHighScores', () => RNHighScores);
 ```
 
 > `RNHighScores`는 iOS 애플리케이션 내에서 React Native에 뷰를 추가 할 때 사용할 모듈의 이름입니다.
-> 
+
+
 #### The Magic: `RCTRootView`[#](https://reactnative.dev/docs/integration-with-existing-apps#the-magic-rctrootview)
 
 이제 React Native 구성 요소가 `index.js`를 통해 생성되었으므로 해당 구성 요소를 신규 또는 기존 `ViewController`에 추가해야합니다. 가장 쉬운 방법은 선택적으로 구성 요소에 대한 이벤트 경로를 만든 다음 해당 구성 요소를 기존 `ViewController`에 추가하는 것입니다.
@@ -319,6 +320,7 @@ React Native 애플리케이션을 빌드 할 때 [Metro bundler](https://facebo
 > `RCTRootView initWithURL`은 새 JSC VM을 시작합니다. 리소스를 절약하고 네이티브 앱의 다른 부분에서 RN 뷰 간의 통신을 단순화하기 위해 단일 JS 런타임과 연결된 React Native 에서 제공하는 여러 뷰를 가질 수 있습니다. 그렇게하려면 `[RCTRootView alloc] initWithURL`을 사용하는 대신 [`RCTBridge initWithBundleURL`](https://github.com/facebook/react-native/blob/master/React/Base/RCTBridge.h#L93)을 사용하여 브리지를 만든 다음 `RCTRootView initWithBridge`를 사용하세요.
 
 > 앱을 프로덕션으로 이동할 때`NSURL`은`[[NSBundle mainBundle] URLForResource:@"main" withExtension:@"jsbundle"];`과 같은 것을 통해 디스크의 사전 번들 파일을 가리킬 수 있습니다. `node_modules/react-native/scripts/`의 `react-native-xcode.sh` 스크립트를 사용하여 사전 번들 파일을 생성 할 수 있습니다.
+
 ##### 3. Wire Up[#](https://reactnative.dev/docs/integration-with-existing-apps#3-wire-up)
 
 메인 메뉴의 새 링크를 새로 추가 된 이벤트 핸들러 메서드에 연결합니다.
