--- a/@docs-md/document/2_environmentSetup/1-2_3.md
+++ b/@docs-md/document/2_environmentSetup/1-2_3.md
@@ -219,7 +219,7 @@ npx react-native run-android
 
 `npx react-native run-android`는 앱을 실행하는 한 가지 방법입니다. Android Studio 내에서 직접 실행할 수도 있습니다.
 
-> 이 작업을 수행할 수 없는 경우 [Troubleshooting](https://reactnative.dev/docs/troubleshooting#content) 페이지를 확인하세요..
+> 이 작업을 수행할 수 없는 경우 [Troubleshooting](https://reactnative.dev/docs/troubleshooting#content) 페이지를 확인하세요.
 
 
 
@@ -227,7 +227,7 @@ npx react-native run-android
 
 이제 앱을 성공적으로 실행했으므로 수정해 보겠습니다.
 
--선 택한 텍스트 편집기에서 `App.js`를 열고 몇 줄을 편집합니다.
+-선택한 텍스트 편집기에서 `App.js`를 열고 몇 줄을 편집합니다.
 
 -`R` 키를 두 번 누르거나 개발자 메뉴 (`Ctrl + M`)에서`Reload`를 선택하여 변경 사항을 확인하세요!
 
