--- a/@docs-md/document/2_environmentSetup/1-2_3.md
+++ b/@docs-md/document/2_environmentSetup/1-2_3.md
@@ -148,13 +148,13 @@ React Native를 기존 애플리케이션에 통합하거나 Expo에서 "ejected
 
 ### [Optional] Using a specific version or template
 
-If you want to start a new project with a specific React Native version, you can use the `--version` argument:
+특정 React Native 버전으로 새 프로젝트를 시작하려면 `--version` 인수를 사용할 수 있습니다:
 
 ```shell
 npx react-native init AwesomeProject --version X.XX.X
 ```
 
-You can also start a project with a custom React Native template, like TypeScript, with `--template` argument:
+TypeScript와 같은 사용자 지정 React Native 템플릿을 `--template` 인수와 함께 사용하여 프로젝트를 시작할 수도 있습니다.
 
 ```shell
 npx react-native init AwesomeTSProject --template react-native-template-typescript
